--- a/system/os/nju-ics-theory/part1/p29-加减运算溢出公式及举例.md
+++ b/system/os/nju-ics-theory/part1/p29-加减运算溢出公式及举例.md
@@ -33,4 +33,138 @@
    x+y-2^n < y
    x-2^n <0 成立  
    ```
-   <script src="https://gist.github.com/SteveLauC/1beb36ea0f2509f6fbb8d521493b7efa.js"></script>
+
+   ```c
+   /*
+   * unsigned int addition overflow test
+   * exit(EXIT_FAILURE) if result overflows
+   * print the correct value if everything is good.
+   */
+
+   #include <stdio.h>
+   #include <stdlib.h>
+
+   unsigned int add(unsigned int x, unsigned int y) {
+       unsigned int result = x + y;
+       if (result < x && result < y) {
+           printf("addition overflow\n");
+           printf("%u\n", result);
+           exit(EXIT_FAILURE);
+       }
+       return result;
+   }
+
+   int main() {
+       // overflow case
+       unsigned int x = 4294967295u;
+       unsigned int y = 1u;  
+       printf("%u\n", add(x, y));
+       return 0;
+   }
+   ```
+
+8. 判断有符号数加法溢出的程序，就是看OF标记，也就是两个正数相加得负数，或者两个
+   负数相加得正数。
+   
+   ```c
+   /*
+   * signed int addition overflow test
+   * exit(EXIT_FAILURE) if result overflows
+   * print the correct value if everything is good.
+   */
+
+   #include <stdio.h>
+   #include <stdlib.h>
+
+   int add(int x, int y) {
+       int result = x + y;
+       if ((x > 0 && y > 0 && result < 0) || (x < 0 && y < 0 && result > 0)) {
+           printf("addition overflow\n");
+           printf("%d\n", result);
+           exit(EXIT_FAILURE);
+       }
+       return result;
+   }
+
+   int main() {
+       // overflow case
+       int x = 2147483647; 
+       int y = 1;  
+       printf("%u\n", add(x, y));
+
+       return 0;
+   }
+   ```
+
+9. 判断无符号数的减法溢出，CF=1，有借位，x-y<0.
+   ```
+   x-y+2^n >x   
+   2^n-y > 0成立
+  
+   x-y+2^n > y
+   2^n-x >0成立
+   ```
+
+   ```c
+   /*
+   * unsigned int subtraction overflow test
+   * exit(EXIT_FAILURE) if result overflows
+   * print the correct value if everything is good.
+   */
+
+   #include <stdio.h>
+   #include <stdlib.h>
+
+   unsigned int sub(unsigned int x, unsigned int y) {
+       unsigned int result = x + y;
+       if (result > x && result > y) {
+            printf("subtraction overflow\n");
+            printf("%u\n", result);
+            exit(EXIT_FAILURE);
+
+        }
+        return result;
+   }
+
+   int main() {
+       // overflow case
+       unsigned int x = 1u;
+       unsigned int y = 2u;
+       printf("%u", sub(x, y));
+
+       return 0;
+   }
+   ```
+
+10. 有符号数减法判断溢出，OF=1
+   
+   ```c
+   /*
+    * unsigned int subtraction overflow test
+    * exit(EXIT_FAILURE) if result overflows
+    * print the correct value if everything is good.
+   */
+
+   #include <stdio.h>
+   #include <stdlib.h>
+
+   unsigned int sub(unsigned int x, unsigned int y) {
+       unsigned int result = x - y;
+       if (result > x && result > y) {
+            printf("subtraction overflow\n");
+            printf("%u\n", result);
+            exit(EXIT_FAILURE);
+        
+        }
+        return result;
+   }
+
+   int main() {
+       // overflow case
+       unsigned int x = 1u;
+       unsigned int y = 2u;
+       printf("%u", sub(x, y));
+
+       return 0;
+   }
+   ```
