--- a/system/os/nju-ics-theory/part1/p29-加减运算溢出公式及举例.md
+++ b/system/os/nju-ics-theory/part1/p29-加减运算溢出公式及举例.md
@@ -139,8 +139,9 @@
 10. 有符号数减法判断溢出，OF=1
    
     ```c
+
     /*
-     * unsigned int subtraction overflow test
+     * signed int subtraction overflow test
      * exit(EXIT_FAILURE) if result overflows
      * print the correct value if everything is good.
     */
@@ -148,23 +149,22 @@
     #include <stdio.h>
     #include <stdlib.h>
 
-    unsigned int sub(unsigned int x, unsigned int y) {
-        unsigned int result = x - y;
-        if (result > x && result > y) {
+    int sub(int x, int y) {
+        int result = x - y;
+        if ((x>0&&y<0&&result<0)||(x<0&&y>0&&result>0)) {
              printf("subtraction overflow\n");
-             printf("%u\n", result);
+             printf("%d\n", result);
              exit(EXIT_FAILURE);
-         
-         }
-         return result;
+        }
+           return result;
     }
- 
+
     int main() {
         // overflow case
-        unsigned int x = 1u;
-        unsigned int y = 2u;
-        printf("%u", sub(x, y));
- 
+        int x = 2147483647 ;
+        int y = -1;
+        printf("%d", sub(x, y));
+
         return 0;
     }
     ```
