--- a/system/os/nju-ics-theory/part1/p29-加减运算溢出公式及举例.md
+++ b/system/os/nju-ics-theory/part1/p29-加减运算溢出公式及举例.md
@@ -168,3 +168,8 @@
         return 0;
     }
     ```
+
+10. 在做有符号数的减法溢出判断的时候，被减数-减数，使用被加数和加数以及结果的符号
+    来判断是否溢出时，加数的符号位应该是减数符号位的反，而不是减数的反的符号位。
+
+    ![illustration](https://github.com/SteveLauC/pic/blob/main/IMG_1621.jpg)
