--- a/system/os/nju-ics-theory/part1/p30-整数乘法运算.md
+++ b/system/os/nju-ics-theory/part1/p30-整数乘法运算.md
@@ -23,11 +23,17 @@
    而我们又知道，n位有符号数的合法范围在`[-2^(n-1), 2^(n-1)-1)`中，所以如果n位结
    果合法，则高n位的值一定是低n位的MSB，也就是说结果的高n+1位一定全0或者全1.
 
-2. 无符号整数的乘法如何判断溢出，高级语言层面也可以使用有符号整数的那个逻辑表达式。
-   但无符号整数的溢出只能是变为负数，所以可以用下面这个
+2. 无符号整数的乘法如何判断溢出，高级语言层面也使用有符号整数的那个逻辑表达式。
 
-   ```c
-   x==0||z>0
-   ```
+   从电路层面上检测可以使用高n位全为0来判断。(注意是高n位而不是n+1位，毕竟是无符
+   号数)
 
-   从电路层面上检测可以使用高n+1位全为0来判断。
+3. 无符号数和有符号数的运算，假如被乘数和乘数的机器数是一样的，则运算结果的2n-1位
+   应该是一样的，高位应该是符号扩展或者是0扩展，导致2n位的结果不一样。
+
+   所以我们取运算结果的低n位作为运算结果，则无符号数和有符号数的n位结果是一样的。
+
+   所以我们可以使用无符号数的乘法电路来计算有符号数的乘法，只不过我们抛弃了高n位，
+   从电路层面检测溢出的功能去掉了。
+
+   ![ppt](https://github.com/SteveLauC/pic/blob/main/Screen%20Shot%202022-03-25%20at%2010.29.12%20AM.png)
