--- a/system/os/nju-ics-theory/part1/p30-整数乘法运算.md
+++ b/system/os/nju-ics-theory/part1/p30-整数乘法运算.md
@@ -23,17 +23,53 @@
    而我们又知道，n位有符号数的合法范围在`[-2^(n-1), 2^(n-1)-1)`中，所以如果n位结
    果合法，则高n位的值一定是低n位的MSB，也就是说结果的高n+1位一定全0或者全1.
 
+
 2. 无符号整数的乘法如何判断溢出，高级语言层面也使用有符号整数的那个逻辑表达式。
 
    从电路层面上检测可以使用高n位全为0来判断。(注意是高n位而不是n+1位，毕竟是无符
    号数)
+   
 
-3. 无符号数和有符号数的运算，假如被乘数和乘数的机器数是一样的，则运算结果的2n-1位
-   应该是一样的，高位应该是符号扩展或者是0扩展，导致2n位的结果不一样。
-
-   所以我们取运算结果的低n位作为运算结果，则无符号数和有符号数的n位结果是一样的。
-
-   所以我们可以使用无符号数的乘法电路来计算有符号数的乘法，只不过我们抛弃了高n位，
-   从电路层面检测溢出的功能去掉了。
-
+3. n位数的乘法运算，由于结果是`2n`位的，所以被乘数和乘数需要先扩展到`2n`位，再进
+   行计算，对于无符号来说就是0扩展，有符号来说是符号扩展。乘完的结果可能比`2n`多，
+   截断到`2n`位。所以相同的乘数和被乘数(机器数相同)，按照无符号和有符号来解释进
+   行乘法，得到的结果的`2n`位机器数是不同的。但有一个公示可以保证低`n`位是相同的，
+   课程中并没有给出来，可以看csapp中文版P62。正因此，我们可以用无符号数的乘法电路
+   来计算有符号数的乘法(因为我们只需要结果的低n位)
    ![ppt](https://github.com/SteveLauC/pic/blob/main/Screen%20Shot%202022-03-25%20at%2010.29.12%20AM.png)
+
+   ![ppt](https://github.com/SteveLauC/pic/blob/main/Screen%20Shot%202022-03-26%20at%2010.35.46%20AM.png)
+
+
+4. 乘法并没有像加法减法那样的从硬件上判断溢出(指没有OF那种标记)，看前n/n+1位的是否全
+   0/1也是靠软件实现的。
+
+5. 无符号数和有符号数的加法运算(减法也是加法)得到的结果的机器数是完全一样的，所以
+   可以公用一套电路，而乘法需要两套电路，因为`2n`的机器数不同。
+
+   > 如果乘法用一套电路的话，那么就没办法从比特级判断溢出了
+
+6. 在使用`malloc`进行分配堆内存的时候
+
+   ```c
+   void * malloc(size_t size);
+   ``` 
+
+   参数要求的类型是`size_t`是usize类型，如果传入的数字是有符号数，注意乘法溢出错误。
+
+   ```c
+   #include <stdlib.h>
+
+   int copy_to_heap(int * arr, int count) {
+       // overflow may happen here
+       int *add = (int *)malloc(sizeof(int)*count);
+
+       for (int i = 0; i < count; i++) {
+           add[i] = arr[i];
+       }
+
+       return count;
+   }
+   ```
+
+7. 整数和常数的乘法通常会用移位和加减来实现，因为这样更快。
