--- a/system/os/nju-ics-theory/part1/p31-整数除法运算.md
+++ b/system/os/nju-ics-theory/part1/p31-整数除法运算.md
@@ -1,11 +1,12 @@
-1. 有符号整数的除法，除了`-2^(n-1)/-1`会溢出外，其余情况都不会溢出。因为其他的情况
-   被除数的绝对值一定大于商的绝对值，所以一定是可以表示的。除数不会是0，所以绝对值
-   只能是1/2/3之类的，所以商的绝对值相对于被除数的绝对值一定是变小了。
+1. 有符号整数及无符号整数的除法，除了有符号的`-2^(n-1)/-1`会溢出外，其余情况都不会
+   溢出。因为其他的情况被除数的绝对值一定大于商的绝对值，所以一定是可以表示的。除
+   数不会是0，所以绝对值只能是1/2/3之类的，所以商的绝对值相对于被除数的绝对值一定
+   是变小了。
 
 2. 因为整数除整数的商还是整数，所以在不能整除的时候，最后取的整数商是在小数的基础上
    往0靠近的，也可以理解为直接将小数部分截去。
 
-3. 取负指令的电路实现就是用模-被操作数，也就是求一个数的相反数的补码表示。
+3. 取负指令的电路实现就是用模减被操作数，也就是求一个数的相反数的补码表示。
 
 4. 假如说
    
@@ -21,9 +22,11 @@
 
 5. 除数是2的幂的话，可以使用右移来实现，无符号数左边补0，有符号数补符号位:  
    
+   > 目前只讲了除数是2的幂的整数除法实现。(2^0, 2^1, 2^2...)
+   
    1. 可以整除，右边移出去的都是0，直接右移
    2. 不可以整数，右边会溢出1，需要单独处理:  
-      1. 无符号数或有符号正数，移出去的位直接丢掉，向0靠齐，截掉小数部分。
+      1. 无符号数或有符号正数，移出去的位(余数)直接丢掉，向0靠齐，截掉小数部分。
       2. 有符号数负数，将被除数先纠偏，加上`2^k - 1`(k是右移的位数)，再右移k位，然后丢掉移
       出去的位。
 
