--- a/system/os/nju-ics-theory/part1/p19-IEEE754中特殊数的表示.md
+++ b/system/os/nju-ics-theory/part1/p19-IEEE754中特殊数的表示.md
@@ -5,11 +5,11 @@
    |0/1 |0  | 0      |  0    |
    |0/1 |0  | 非0    | 在最大的负浮点数到0和最小的正浮点数到0之间的无法表示的数|
    |0/1 |全1| 0      | 正/负无穷(取决符号位)|
-   |    |全1| 非0    | NAN   |
+   |    |全1| 非0    | NaN   |
   
    ```rust
    fn main() {
-       let x: f32 = -12.75/0.0;
+       let x: f32 = -12.75/0.0; // NaN
        println!("{:b}", x.to_bits());
    }
    ```
