--- a/system/os/nju-ics-theory/part1/p32-浮点加减运算.md
+++ b/system/os/nju-ics-theory/part1/p32-浮点加减运算.md
@@ -3,3 +3,68 @@
    ![ppt](https://github.com/SteveLauC/pic/blob/main/Screen%20Shot%202022-03-27%20at%2011.26.09%20AM.png)
 
    ![note](https://github.com/SteveLauC/pic/blob/main/IMG_1623.jpg)
+   
+  
+2. rust中浮点数中的特殊值的源码
+  
+   ```rust
+   /// Not a Number (NaN).
+   #[stable(feature = "assoc_int_consts", since = "1.43.0")]
+   pub const NAN: f32 = 0.0_f32 / 0.0_f32;
+
+   /// Infinity (∞).
+   #[stable(feature = "assoc_int_consts", since = "1.43.0")]
+   pub const INFINITY: f32 = 1.0_f32 / 0.0_f32;
+
+   /// Negative infinity (−∞).
+   #[stable(feature = "assoc_int_consts", since = "1.43.0")]
+   pub const NEG_INFINITY: f32 = -1.0_f32 / 0.0_f32;
+   ```
+
+3. IEEE754规定的5种异常情况
+
+   1. 无效运算(无意义)
+      1. 运算时至少有一个操作数是0/∞
+      2. 结果无效 例如NaN(操作数是NaN，结果就是NaN)
+   2. 除数为0，被除数不为0，无穷大
+   3. 阶码上溢
+   4. 阶码下溢
+   5. 运算结果无法用浮点数在计算机内表示
+
+4. c99引入了`INFINITY`的常量，可以在`#include <math.h>`中拿到
+
+   > #define INFINITY /*implementation defined*/ (since C99)
+
+5. 在整数中，`division by zero is undefined`
+
+6. 为什么整数除0是未定义行为，因为无法用整形来表示其结果(数学里面不允许这样的运
+   算啊)。但浮点数有INFINITY这样的值存在，故可以进行运算。
+ 
+7. 浮点数加减运算步骤: 
+
+   1. 求操作数的阶码差
+   1. 对阶 小阶码向大阶码看齐。
+   2. 对尾数进行运算
+   3. 规格化：
+       * 若尾数中前面有2个1，则小数点左移，exp+1(对exp操作时要判断阶码上溢)
+       * 若尾数中前面是0，则小数点右移直到最前面位是1(对exp操作时要判断阶码下溢)
+   6. 如果尾数比mantissa尾数长， 对尾数按照mantissa的位数进行舍入。
+   7. 若阶码为0，则设置mantissa也为0(因为阶码为0，0x任何数都为0，所以结果一定是0)
+
+   
+8. 用浮点数的运算方法计算`0.5-0.4375`
+
+   ```
+   0.5 = 0.1 x 2^0 = 1.0 x 2^(-1)        -> 1.0 x 2^(-1)
+   0.4375 = 0.0111 x 2^0 = 1.11 x 2^(-2) -> 0.111 x 2^(-1)
+
+   1.0-0.111 = 0.001
+
+   结果为 0.001 x 2^(-1) -> 1.0 x 2^(-4)
+   ```
+ 
+9. 为什么左规最多只移动一位？
+
+   因为两个规格化的浮点数想家，`1.x + 1.x`，其结果最多也就是`11.x(其值达到3)`，不
+   会到`111.x/1111.x/11111.x`之类
+
