--- a/system/os/nju-ics-theory/part1/p33-浮点运算的精度.md
+++ b/system/os/nju-ics-theory/part1/p33-浮点运算的精度.md
@@ -13,7 +13,6 @@
 
 3. IEEE754的4种舍入模型
 
-   Rounding floating-point numbers
    The IEEE standard has four different rounding modes; the first is the default;
    the others are called directed roundings.
 
@@ -22,6 +21,7 @@
    *even* (zero) least significant bit, which means it is rounded up 50% of the
    time (in IEEE 754-2008 this mode is called roundTiesToEven to distinguish it 
    from another round-to-nearest mode)
+    ![ppt](https://github.com/SteveLauC/pic/blob/main/Screen%20Shot%202022-03-28%20at%2010.31.38%20AM.png)
 
    2. Round toward 0 – directed rounding towards zero
    3. Round toward +∞ – directed rounding towards positive infinity
