--- a/system/os/nju-ics-theory/part1/p33-浮点运算的精度.md
+++ b/system/os/nju-ics-theory/part1/p33-浮点运算的精度.md
@@ -26,3 +26,7 @@
    2. Round toward 0 – directed rounding towards zero
    3. Round toward +∞ – directed rounding towards positive infinity
    4. Round toward −∞ – directed rounding towards negative infinity.
+
+4. IEEE754就近舍入举例
+   
+   ![note](https://github.com/SteveLauC/pic/blob/main/IMG_9C4BE469E4B2-1.jpeg)
