--- a/system/os/nju-ics-theory/part1/p33-浮点运算的精度.md
+++ b/system/os/nju-ics-theory/part1/p33-浮点运算的精度.md
@@ -28,5 +28,62 @@
    4. Round toward −∞ – directed rounding towards negative infinity.
 
 4. IEEE754就近舍入举例
+
+   > Z是无法用浮点数表示的，而Z1，Z2可以
    
    ![note](https://github.com/SteveLauC/pic/blob/main/IMG_9C4BE469E4B2-1.jpeg)
+
+5. IEEE754余下3种舍入模型举例
+  
+   使用第4条笔记的图
+
+   * 向0舍入，若Z为正数，则取Z1；为负数，则取Z2
+   * 向正无穷舍入，取Z2
+   * 向负无穷舍入，取Z1
+
+   > 其实无论用哪种舍入方法，Z最后不是取Z1就是取Z2，即取它周围的。
+ 
+
+6. 浮点数精度代码举例
+   
+   > f32最多表示7个10进制的有效位
+
+   ```rust
+   fn main() {
+       let single: f32 = 123456.789e4;
+       let double: f64 = 123456.789e4;
+
+       println!("{}", single); // 1234568000
+       println!("{}", double); // 1234567890
+   }
+   ```
+
+ 
+7. 从int转为float，不会发生溢出(exp上溢)，但可能有数据舍入，因为精度不同。
+   从int/float转double则没问题，精度可以。
+
+   使用rust的实现来佐证，`f64`实现了`From<f32>/From<i8>/From<u8>/From<i16>/From<u16>
+   /From<i32>/From<u32>`。而`f32`仅实现了`From<i8>/From<u8>/From<i16>/From<u16`。
+
+   `TryFrom`这个trait以及其姊妹`TryInto`只实现了整数间的各种可能失败的转化。
+
+   关于从浮点数到整数，目前仅有`f64/f32`类型的
+   
+   ```rust
+   // 这几个函数算是显式地对浮点进行取舍
+   pub fn round(self) -> f64/f32
+   pub fn floor(self) -> f64/f32
+   pub fn ceil(self) -> f64/f32
+   pub fn trunc(self) -> f64/f32
+   ```
+    
+   这几种方法可供选择，不清楚未来会不会引入`TryFrom<f32/f64>`给整型，怎么取舍
+   估计是个问题。
+
+   > 总结下，从整型转浮点，只要浮点的精度大于整形，就可以成功转换；而从浮点转整形
+   ，目前仅有几个浮点特有的实现。
+
+
+8. 正负无穷是可以参与比大小的，它的性质还不错。但NaN则不同，它不等于任何的浮点数，
+   包括它自己。它也不必任何浮点数大，不比任何浮点数小。而且它具有传染性，任何计算，
+   有一个运算数是NaN，结果也是NaN
