--- a/system/os/nju-ics-theory/part1/p30-整数乘法运算.md
+++ b/system/os/nju-ics-theory/part1/p30-整数乘法运算.md
@@ -31,7 +31,7 @@
    
 
 3. n位数的乘法运算，由于结果是`2n`位的，所以被乘数和乘数需要先扩展到`2n`位，再进
-   行计算，对于无符号来说就是0扩展，有符号来说是符号扩展。乘完的结果可能比`2n`多，
+   行计算，对于无符号来说就是0扩展(和没有扩展一样)，有符号来说是符号扩展。乘完的结果可能比`2n`多，
    截断到`2n`位。所以相同的乘数和被乘数(机器数相同)，按照无符号和有符号来解释进
    行乘法，得到的结果的`2n`位机器数是不同的。但有一个公示可以保证低`n`位是相同的，
    课程中并没有给出来，可以看csapp中文版P62。正因此，我们可以用无符号数的乘法电路
