--- a/system/os/nju-ics-theory/part1/p28-加减运算生成的标志信息.md
+++ b/system/os/nju-ics-theory/part1/p28-加减运算生成的标志信息.md
@@ -72,7 +72,7 @@
 11. 减法溢出的判断:  
     1. 无符号数看其是否结果为负数，因为无符号数没办法表示负数，所以有
     负数，则溢出。结果是否为负则看其是否有借位，被减数小于减数不够减，
-    结果为负，才需要借位。
+    结果为负，才需要借位，CF标记
     2. 有符号数同加法，看OF标志。(因为补码减法是靠加法实现的)
 
 11. 计算机如何比较俩个数的大小，进行减法操作:  
