--- a/system/system-programming/understanding-unix-linux-programming/Ch10.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch10.md
@@ -57,7 +57,11 @@
    1. close-then-open方法，即先关闭fd0，然后再打开目标文件，由于最低可用文件描述符，这个文件的fd就自动变为了0，也就完成了重定向。
    2. open-close-dup-close: 先打开目标文件得到fd_file，然后关闭fd 0，然后使用`dup(fd_file)`为文件增加一个文
       件描述符，由于刚关闭了0，所以dup会拿到0，这样文件就有0和fd_file两个fd了。然后`close(fd_file)`，就只剩下0这个fd了
+   3. open-dup2-close: 先打开目标文件，拿到fd，然后使用`dup2(fd, 0)`，将`0`fd抢过来，再`close(fd)`
    
+   > 从race condition的角度讲，貌似只有使用`dup2`这个方法是安全的
+   
+   > stdout/stderr的`>`重定向是一样的，`>>`这样的重定向只需要将文件打开的`Flag`加一个`O_APPEND`
 
 7. 文件描述符和已打开的文件的关系
 
@@ -69,3 +73,21 @@
    
 8. `int dup(int oldfd)`系统调用，当你一个已经打开的文件，想再拥有一个文件描述符时，可以使用这个系统调用。比如一个已打开的文件拥有fd 3
    ，想再拥有一个fd，就可以使用`dup(3)`来做到，这样就会按照最低可用文件描述符原则再给此文件分配一个可用的fd，然后这个文件就有2个fd了
+
+    `int dup2(int oldfd, int newfd)`，这个和`dup`很像，它也会给`oldfd`所指向的文件再加上一个新的fd，但是新
+    fd的分配不是使用最小可用文件描述符来做的，而是让程序员指定(newfd)的。如果`newfd`事先已经被打开了，则直接将其关闭，抢过来
+    
+    > The dup2() system call performs the same task as dup(), but instead of 
+    using the lowest-numbered unused file descriptor, it uses the file descriptor 
+    number specified in newfd.  If the file descriptor newfd was previously open
+    , it is silently closed before being reused.
+    
+    可以看出来`dup2(old_fd, new_fd)`其实就是`close(new_fd) + dup(old_fd)`的结合，但有一点不一样的是，
+    `dup2`将这两个操作变为了原子操作，避免了race condition。
+    
+    > The  steps of closing and reusing the file descriptor newfd are performed 
+    atomically.  This is important, because trying to implement equivalent functionality 
+    using close(2) and dup() would be subject to race conditions, whereby newfd might 
+    be reused between the two steps.  Such reuse could happen because the main program
+    is interrupted by a signal handler that allocates a file descriptor, or because a 
+    parallel thread allocates a file descriptor.
