--- a/system/system-programming/understanding-unix-linux-programming/Ch10.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch10.md
@@ -91,3 +91,55 @@
     be reused between the two steps.  Such reuse could happen because the main program
     is interrupted by a signal handler that allocates a file descriptor, or because a 
     parallel thread allocates a file descriptor.
+    
+
+9. 我们已经知道了程序如何进行重定向，是替换0/1/2的fd，那么shell是如何做的呢
+
+   以`close-open-close`为例，假定shell在解析命令时发现了`>out`，那么在使用`fork()`创建子进程后，使用`exec()`运
+   行命令之前，需要对fd进行替换
+   
+   ```c
+   if (-1 == (pid = fork())) {
+        perror("fork()");
+        return -1;
+   } else if (0 == pid) {
+       // 需要在这里对fd进行替换
+       
+       // execute the command
+       if (-1 == execvp(argv[0], argv)) {
+           perror("execvp()");
+           exit(-1);
+       }
+   } 
+   ```
+   
+   > 所以重定向是shell完成的，但也是shell在子进程中完成的，而不是在父进程中。如果是在父进程中完成的，那么shell就没办法用了
+   
+
+10. rust的`std::process::Command`有一个叫做`spawn`的方法，会直接创建一个子进程，然后执行命令
+
+    ```rust
+    pub fn spawn(&mut self) -> Result<Child>
+    ```
+    Executes the command as a child process, returning a handle to it. **By default**, stdin, stdout and stderr are inherited from the parent.
+
+    ```rust
+    // Examples
+    use std::process::Command;
+
+    Command::new("ls")
+            .spawn()
+            .expect("ls command failed to start");
+    ```
+    
+    我本来看到这个方法时想自己写的shell是用POSIX的api先fork再exec的，有点傻，在rust这边不如直接调用spawn，但学到重定向这里，
+    就会发现，用这个方法的话，做重定向就比较难做，要在父进程里面改来改去然后传给子进程再改回来
+    
+11. `int pipe(int pipefd[2])`系统调用来创建管道
+    这个家伙的用法比较简单，你需要提供一个大小为2的数组给它，然后它就会打开2个文件，给这2个文件分配最小可用的文件描述符，将fd写入这个
+    数组中，这就是管道的两端了。`pipefd[1]`是可以写的一端，你可以`write(pipefd[1], buf, count)`对其进行写，你写的东西就会被放
+    到`pipefd[0]`这个fd的文件中，然后就可以使用`read(pipefd[0], buf, count)`进行读操作。
+    
+    需要注意的是，如果你在读的时候使用的函数是一直读直到遇到EOF，那么你需要将`pipefd[1]`关掉，只有写入端关掉后，才会有EOF被发送除去
+
+    > 单独在一个进程内，对两个文件读写并没有什么意思。我们需要使用管道来做IPC，这就需要将`pipe`和`fork`结合起来
