--- a/system/system-programming/understanding-unix-linux-programming/Ch10.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch10.md
@@ -144,3 +144,9 @@
 
     > 单独在一个进程内，对两个文件读写并没有什么意思。我们需要使用管道来做IPC，这就需要将`pipe`和`fork`结合起来
 
+   
+12. 将`pipe`和`fork`结合起来
+    
+    当使用`pipe`后，该进程就有了连向管道两端的连接。而当此进程调用`fork`后，它的子进程也得到了这两个连向管道的连接。
+
+    > 感觉在思考这种连接的时候先忘掉文件描述符与文件比较好，仅仅考虑这就是一个管道，不去在意他的底层实现
