--- a/system/system-programming/understanding-unix-linux-programming/Ch10.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch10.md
@@ -142,7 +142,10 @@
     
     需要注意的是，如果你在读的时候使用的函数是一直读直到遇到EOF，那么你需要将`pipefd[1]`关掉，只有写入端关掉后，才会有EOF被发送除去
 
-    > 单独在一个进程内，对两个文件读写并没有什么意思。我们需要使用管道来做IPC，这就需要将`pipe`和`fork`结合起来
+    > 单独在一个进程内，对两个文件读写并没有什么意思。我们需要使用管道来做IPC，这就需要将`pipe`和`fork`结合起来。两个进程如果要用
+    pipe连接起来，那么这两个进程一定要有血缘关系，指通过`fork()`得来
+    
+    > 在SO上有人提示我说`pipe`用的时候，一个进程读就只能读，而不能再去写了
 
    
 12. 将`pipe`和`fork`结合起来
@@ -150,3 +153,20 @@
     当使用`pipe`后，该进程就有了连向管道两端的连接。而当此进程调用`fork`后，它的子进程也得到了这两个连向管道的连接。
 
     > 感觉在思考这种连接的时候先忘掉文件描述符与文件比较好，仅仅考虑这就是一个管道，不去在意他的底层实现
+
+13. `fork`但没有`wait()`
+
+    这样的子进程被成为`zombie process`，僵尸进程，会在内核中继续占有位置，以便他的父进程来收集他的信息；当父进程消亡后，僵尸进程被1号进程
+    收留，然后会被1号进程`wait()`
+    
+    > A child that terminates, but has not been waited for becomes a "zombie".  
+    The kernel maintains a minimal set of information about the zombie process 
+    (PID, termination status, resource usage information) in order to allow the 
+    parent to later perform a wait to obtain information about the child.  As 
+    long as  a  zombie  is not  removed  from  the system via a wait, it will 
+    consume a slot in the kernel process table, and if this table fills, it will 
+    not be possible to create further processes.  If a parent process terminates, 
+    then its "zombie" children (if any) are adopted by init(1), (or by the nearest 
+    "subreaper" process as defined through the use of the prctl(2) 
+    PR_SET_CHILD_SUBREAPER operation); init(1) automatically performs a wait to 
+    remove the zombies.
