--- a/system/system-programming/understanding-unix-linux-programming/Ch11.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch11.md
@@ -50,5 +50,84 @@
    6. 子进程: close(fd[0]);close(fd[1])
    7. 子进程: 调用`exec`系函数，执行`bash -c command`
 
+   > ? 是否需要在这里手动的`close(0)`或者是`close(1)`来关闭已经被重定向的管道，
+   书上给的思路并没有close
+
    > 由于我们在实现中只会创建一个`pipe`，而`pipe`是`unidirectional`的，所以`type`
    这个参数只能是`w`或`r`
+
+5. 在使用`popen()`后得到的`stream`需要使用`pclose()`来关闭，而不可以使用`fclose()`
+   来关闭它，因为我们在`popen`中调用了`fork`，需要调用`wait`来避免`zombie process`
+   ，而在`pclose()`的实现中就调用了`wait`
+
+6. linux源码中的标记`__attribute_nonstring__`，暗示着`char`的数组可能并不是`NUL`
+   结尾
+
+    ```c
+    struct utmp
+    {
+      short int ut_type;		/* Type of login.  */
+      pid_t ut_pid;			/* Process ID of login process.  */
+      char ut_line[UT_LINESIZE]
+        __attribute_nonstring__;	/* Devicename.  */
+      char ut_id[4]
+        __attribute_nonstring__;	/* Inittab ID.  */
+      char ut_user[UT_NAMESIZE]
+        __attribute_nonstring__;	/* Username.  */
+      char ut_host[UT_HOSTSIZE]
+        __attribute_nonstring__;	/* Hostname for remote login.  */
+      struct exit_status ut_exit;	/* Exit status of a process marked
+                       as DEAD_PROCESS.  */
+    ```
+
+    比如`utmp`结构体中的`ut_user`字段，如果使用`printf("%s\n", p->ut_user)`来打
+    印gcc会给warning
+
+    ```
+    main.c: In function ‘main’:
+    main.c:8:9: *warning: ‘__builtin_puts’ argument 1 declared attribute ‘nonstring’ [-Wstringop-overread]*
+        8 |         printf("%s\n", p->ut_user);
+          |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
+    In file included from /usr/include/utmp.h:29,
+                     from main.c:2:
+    /usr/include/x86_64-linux-gnu/bits/utmp.h:66:8: note: argument ‘ut_user’ declared here
+       66 |   char ut_user[UT_NAMESIZE]
+          |        ^~~~~~~
+    ```
+
+    可以使用限制打印长度的`formatter`来打印
+
+7. 在打印`utmp`结构体时可以不去读文件，libc封装了一个函数`getutent()`函数来直接
+   给`struct utmp *`的指针
+
+   ```c
+   #include <stdio.h>
+   #include <utmp.h>
+
+   int main() { 
+       struct utmp * p = NULL;
+
+       while ((p = getutent()) != NULL) {
+
+           printf("%32s\n", p->ut_user);
+       }
+
+       return 0;
+   }
+   ```
+
+8. 管道只能在进程中被创建，通过`fork()`在进程间进行共享。所以`pipe`只能连接相关
+   的进程，也只能连接一台主机上的进程。而`socket`通信则可以在不同的主机间进行
+   通信
+
+9. 互联网的众多网络服务，可以在`/etc/services`中查找
+
+10. 在c中清空字符串
+
+    * `void memset(void *s, int c, size_t n)` `#include <string.h>`
+
+    * `void bzero(void *s, size_t n)` `#include <strings.h>`
+    > 已经过时了，别用
+
+    * `void explicit_bzero(void *s, size_t n)` #include <string.h>
+    > 并非C的标准，在某些BSD系统中缺失
