--- a/system/system-programming/understanding-unix-linux-programming/Ch11.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch11.md
@@ -131,3 +131,42 @@
 
     * `void explicit_bzero(void *s, size_t n)` #include <string.h>
     > 并非C的标准，在某些BSD系统中缺失
+
+11. 在c中拿到`hostname`
+    
+    ```c
+    #include <unistd.h>
+    int main() {
+        char host[100] = {'\0'};
+
+        gethostname(host, 100);
+        printf("%s\n", host);
+        return 0;
+    }
+    ```
+    > `hostname`是必须在有网络的情况下才可以拿到的
+
+
+    在rust中可以使用第三方的crate，不过都是对`libc::gethostname`的封装罢了
+
+
+12. linux下`hostname`的最大长度，`POSIX`规定是最大`255`。但不同的系统可能有不同
+    的规定，对于`debian`，是`64`。而`freebsd`则是`255`
+
+    ```shell
+    $ getconf HOST_NAME_MAX
+    64
+    ```
+
+    > getconf可以用来查询一些配置
+
+    ```c
+    // 使用c来查询
+    #include <stdio.h>
+    #include <limits.h>
+
+    int main() {
+        printf("%d\n", HOST_NAME_MAX);
+        return 0;
+    }
+    ```
