--- a/system/system-programming/understanding-unix-linux-programming/Ch11.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch11.md
@@ -170,3 +170,14 @@
         return 0;
     }
     ```
+13. `accept`会阻塞当前进程，直到收到请求，连接被建立起来
+
+    ```c
+    int accept(int sockfd, struct sockaddr *addr, socklen_t *addrlen);
+    ```
+
+    参数中的`addr/addrlen`是client的地址和地址长度，如果这两个参数不传入`NULL`
+    的话，那么我们事先准备好的buffer就会被填充client的信息
+
+14. socket读的那一方只有当写的一方关掉`fd`时才可以拿到`EOF`，这一点和`pipe`是类
+    似的
