--- a/system/system-programming/understanding-unix-linux-programming/Ch11.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch11.md
@@ -181,3 +181,51 @@
 
 14. socket读的那一方只有当写的一方关掉`fd`时才可以拿到`EOF`，这一点和`pipe`是类
     似的
+
+
+15. 将域名解析为ip地址
+
+    ```c
+    #include <string.h>
+    #include <netdb.h>
+    #include <arpa/inet.h>
+
+    int main() {
+        char * hostname = "www.google.com";
+        struct hostent * hp = gethostbyname(hostname);
+        char ip_address[INET6_ADDRESSLEN];
+        memset(ip_address, 0, INET6_ADDRESSLEN); 
+
+        switch (hp->h_addrtype) {
+            case AF_INET:
+                struct in_addr ** p = (struct in_addr **)hp->h_addr_list;
+                for(int i = 0; p[i]!=NULL; i+=1) {
+                    inet_ntop(AF_INET, &p[i], ip_address, INET_ADDRESSLEN);
+                    printf("%s\n", ip_address);
+                    *ip_address = '\0';
+                }
+                break;
+            case AF_INET6:
+                struct in6_addr ** p = (struct in6_addr **)hp->h_addr_list;
+                for(int i = 0; p[i]!=NULL; i+=1) {
+                    inet_ntop(AF_INET6, &p[i], ip_address, INET6_ADDRESSLEN);
+                    printf("%s\n", ip_address);
+                    *ip_address = '\0';
+                }
+                break;
+        }
+    }
+    ```
+
+    ```rust
+    use std::net::ToSocketAddrs;
+
+    fn main() {
+        let server_details = "www.google.com:80";
+        let server: Vec<_> = server_details
+            .to_socket_addrs()
+            .expect("Unable to resolve domain")
+            .collect();
+        println!("{:?}", server);
+    }
+    ```
