--- a/system/system-programming/understanding-unix-linux-programming/Ch11.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch11.md
@@ -229,3 +229,15 @@
         println!("{:?}", server);
     }
     ```
+
+16. `hostent`结构体的`h_addr_list`字段的类型是`char **`，因为当时没有`void`，
+    `char *`是通用的指针类型。还有就是当时的技术栈很多，TCP/IP并没有占据统一
+    地位，导致返回的地址的类型是多样的。即使现在TCP/IP占据了统一地位，我们仍有
+    v4/v6的两个不同的地址类型(in_addr/in6_addr)。
+
+    > 在使用这个的时候，需要看一下其`h_addrtype`字段，来判断是什么类型的地址，
+    然后再将`char**`转换为那种类型的二级指针
+
+
+17. socket编程中，从server写到client，是往client的fd里写。然而从client写到server
+    则是往client自己的fd里写
