--- a/system/system-programming/understanding-unix-linux-programming/Ch12.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch12.md
@@ -53,3 +53,22 @@
    第一个参数用来指定要`wait`的子进程号，但我们可以传`-1`给他，这样就可以去`wait`
    所有的子进程。然后第二个是为了拿到子进程的状态(和wait参数相同)，第3个传`WNOHANG`
    表示，如果没有子进程了就不必再等待了.
+
+6. HTTP总结
+   
+   1. 客户端发送请求
+   ```
+   GET filename HTTP/version
+   可选参数
+   空行
+   ``` 
+
+   2. 服务器发送应答
+   ```
+   HTTP/version status-code status-message
+   附加信息
+   空行
+   要传回的文件内容
+   ```
+
+   > HTTP1.0 RFC1945 1.1 RFC2068
