--- a/system/system-programming/understanding-unix-linux-programming/Ch13.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch13.md
@@ -3,7 +3,8 @@
    * server: 
        1. `socket`拿到一个socket
        2. 将拿到的socket和自己的地址进行`bind`
-       3. 直接调用`recvfrom`从`server_socket`中进行读写
+       3. 直接调用`recvfrom`从`server_socket`中进行读写，这里一定要调用`recvfrom`
+       并且要留住client的地址，这样才可以待会再写回去
 
        > 和TCP相比，省略了`listen/accept`，而且读写是从`server_fd`而不是`client_fd`
        中进行的
@@ -14,6 +15,11 @@
         3. 直接调用`sendto`进行读写
 
         > 和TCP相比，省略了`connect`
+
+    > 其实在client这一侧，我们也可以像server那样做，`socket/bind/recvfrom|sendto`，
+    只不过`bind`的地址改为`0.0.0.0:0`不就可以了吗?但其实对client进行bind不是那么好
+    的习惯，应该不显示调用bind而由系统进行分配
+
 
 2. rust的UDP，在创建socket时必须要制定具体的IP/PORT，这和C中我们做的不一样，可以
    使用
@@ -58,3 +64,4 @@
 
    对于`connected`的socket，我们使用`send`函数，而对于`unconnected`的socket，使用
    `sendto`。那么`TCP`使用`send`(or write)，而对于UDP，取决于是否`connected`
+
