--- a/system/system-programming/understanding-unix-linux-programming/Ch13.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch13.md
@@ -65,3 +65,88 @@
    对于`connected`的socket，我们使用`send`函数，而对于`unconnected`的socket，使用
    `sendto`。那么`TCP`使用`send`(or write)，而对于UDP，取决于是否`connected`
 
+7. 在使用`recvfrom`时，最后一个参数应该在传入之前被初始化掉，使用`addrlen = 
+   sizeof(src_addr)`来初始化
+   
+   ```c
+   ssize_t recvfrom(int sockfd, void *buf, size_t len, int flags, struct sockaddr *src_addr, socklen_t *addrlen);
+   ```
+8. `int kill(pid_t pid, int sig);`系统调用，是用来给`pid`进程发送`sig`信号的，但
+   其实可以将`sig`置为0来试探`pid`这个进程是否存活着
+
+    ```c
+    #include <stdio.h>
+    #include <sys/types.h>
+    #include <signal.h>
+    #include <errno.h>
+
+    int main() {
+        if (-1 == kill(1, 0) && errno==ESRCH) {
+            printf("process 0 does not exist\n"); 
+        }else {
+            printf("process 0 exists\n"); 
+        }
+    }
+    ```
+
+    在shell中可以这样做`kill -0 PID`
+
+
+9. `AF_UNIX/AF_LOCAL`可以用于本机的进程通信，此种通信的地址类型变成了`sockaddr_un`
+
+    ```c
+    struct sockaddr_un {
+        sa_family_t sun_family;               /* AF_UNIX */
+        char        sun_path[108];            /* Pathname */
+    };
+    ```
+    和IPV4不同的是，UNIX domain的地址的bind需要bind到一个指定的文件中去。当bind后
+    ，系统会在`sun_path`指定的路径创建一个socket文件，在使用完后，需要手动地删除
+    此文件
+
+10. 直到C99，才允许将变量声明写在一个code block的任一个位置。在此之前，声明必须写在
+    code block的开头
+
+    [link](https://stackoverflow.com/a/13291402/14092446)
+
+11. 在c语言里面，`void fn()`和`void fn(void)`不是一个东西，前者代表此函数接受任意
+    多个参数，后者代表0个参数。在cpp里面两者才是相同的东西
+
+    ```c
+    #include <stdio.h>
+    void hello() {
+        printf("hello");
+    }
+
+    int main() {
+        hello(1, 2, 3, 4); 
+    }
+    ```
+
+    ```shell
+    $ gcc main.c && ./a.out
+    hello%
+    ```
+
+    你会发现它神奇得编译通过了，但是将函数改为`void hello(void)`后则编译失败
+
+    ```shell
+    $ gcc mian.c
+    main.c: In function ‘main’:
+    main.c:8:5: error: too many arguments to function ‘hello’
+        8 |     hello(1, 2, 3, 4);
+          |     ^~~~~
+    main.c:3:6: note: declared here
+        3 | void hello(void) {
+          |      ^~~~~
+    ```
+
+12. 这种UNIX domain的socket通讯也是分`TCP`和`UDP`的，在c中使用`socket`函数的第
+    2个参数来区别，在rust中`std::os::unix::net::UdpDatagram`是udp，`UnixTcpListener`
+    以及`UnixStream`是tcp。如果client和server的协议不同，`sendto`函数会报错
+    `protocol wrong type for socket`。
+
+    再者就是UNIX domain这种东西，其地址是socket文件的地址，而不是`ip:port`了，如果一
+    server bind到`path_a`上，运行server，然后停止server，再运行server，会bind失败，
+    (address alreay in use) 这是因为`path_a`这个文件已经bind给之前的server进程了，
+    需要删掉文件，就可以重新bind了
