--- a/system/system-programming/understanding-unix-linux-programming/Ch13.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch13.md
@@ -150,3 +150,6 @@
     server bind到`path_a`上，运行server，然后停止server，再运行server，会bind失败，
     (address alreay in use) 这是因为`path_a`这个文件已经bind给之前的server进程了，
     需要删掉文件，就可以重新bind了
+
+    > 本以为UNIX domain的通讯由于是本机间进程通讯，所以其地址会是进程号之类的东西，
+    结果不是
