--- a/system/system-programming/understanding-unix-linux-programming/Ch14.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch14.md
@@ -61,3 +61,10 @@
    来创建线程
 
    > scope, for spawning threads that borrow local variables from the stack.
+
+6. 当一个线程调用`fork`的时候，得到的子进程中有调用`fork`的子线程。在单线程的程序中
+   这点是比较直观的，但在多线程的程序中，则需要注意一下哈
+
+   > [link](https://stackoverflow.com/questions/39890363/what-happens-when-a-thread-forks)
+
+7. 线程之间如何通讯？
