--- a/system/system-programming/understanding-unix-linux-programming/Ch14.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch14.md
@@ -67,4 +67,80 @@
 
    > [link](https://stackoverflow.com/questions/39890363/what-happens-when-a-thread-forks)
 
-7. 线程之间如何通讯？
+
+7. 条件变量的api
+    
+   ```c
+   // 初始化一个条件变量
+   pthread_cond_t flag = PTHREAD_COND_INITIALIZER;
+
+   // 创建一个互斥的信号量
+   pthread_mutex_t lock = PTHREAD_MUTEX_INITIALIZER;
+
+   pthread_mutex_lock(&lock);
+   // 会挂起当前线程，等待`flag`发生变化，并将`lock`给解锁。当`flag`发生变化，
+   // 当前线程会被唤醒，且自动给`lock`再加锁
+   // NOTE: 需要注意的是，在当前线程调用此函数前，该线程必须拥有对lock的独占权
+   // NOTE: 否则其行为就是未定义的
+   pthread_cond_wait(&flag, &lock);
+
+   // 发送信号，唤醒一个线程
+   // 若没有线程等待消息，什么都不会发生；若有多个线程在等待，则只唤醒其中的一
+   // 个
+   pthread_cond_signal(&flag);
+   ```
+
+8. detached thread vs joined thread
+
+   A Detached thread automatically releases it allocated resources on exit. No
+   other thread needs to join it. But by default all threads are joinable, so 
+   to make a thread detached we need to call pthread_detach() with thread id i.e.
+
+   如何创建detached threads
+
+    ```c
+    // 方法1
+    ptread_t t;
+    pthread_create(&t, NULL, start_routine, NULL);
+    pthread_detach(t);
+    ```
+
+    ```c
+    // 方法2 
+    ptread_t t;
+    pthread_attr_t attribute;
+    pthread_attr_init(&attribute);
+    pthread_attr_setdetached(&attribute, PTHREAD_CREATE_DETACHED);
+    pthread_create(&t, attribute, start_routine, NULL);
+    ```
+
+    在rust里面，如果你不将`spaswn()`返回的`JoinHandle`取出来，那么此线程就是
+    `detached thread`
+
+    ```rust
+    use std::thread;
+
+    thread::spawn(move || {
+        // some work here
+    });
+    ```
+
+    如果把JoinHandle拿出来，则是`Joined thread`了
+    ```rust
+    use std::thread;
+
+    let thread_join_handle = thread::spawn(move || {
+        // some work here
+    });
+    // some work here
+    let res = thread_join_handle.join();
+    ```
+
+9. zombie threads
+
+   一个僵尸线程和僵尸进程是比较类似的。在进程中，如果子进程已经完成了任务，但是
+   父进程并没有调用`wait`，此时的子进程就变成了僵尸进程。对于线程而言，如果一个
+   `Joined thread`完成其任务，但是其他的线程并没有在其上调用`join`，此时的线程
+   就变成了僵尸线程
+
+   > detached thread由于其会自动释放资源，在任务完成的时候，故不会产生僵尸线程
