--- a/system/system-programming/understanding-unix-linux-programming/Ch15.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch15.md
@@ -103,3 +103,84 @@
 7. 对于文件的读写者问题，根据读者或写者占据共享资源的情况，有两种文件锁。一种给
    读者，告诉其他进程，有进程在读此文件，其他进程若想写此文件，则要等待。另一个
    给写者，告诉其他进程，有进程在写此文件，其他进程若想读此文件，则要等待
+
+8. 对文件施加文件锁的方法有3种
+   1. flock(2)
+   2. lcokf(3)
+   3. fcntl(2)
+
+   > 在这3种里面，最灵活和跨平台的是`fcntl(manipulate file descriptor)`
+
+   ```c
+   // 锁住整个文件的操作
+   // 如果要锁住部分文件，则需要更改配置
+
+   // 准备一个锁配置
+   strcut flock lock_config;
+   // 读锁或者是写锁
+   lock_config.l_type = F_RDLCK/F_WRLCK;
+   // 从某处的0字节开始
+   lock_config.l_start = 0;
+   // 某处在这里设置，是文件开始处
+   lock_config.where = SEEK_SET;
+   // 直到EOF
+   lock_config.l_len = 0;
+
+   // 使配置生效
+   fcntl(target_fd, F_SETLKW, &lock_config);
+   ```
+
+   ```c
+   // 对文件进行解锁
+
+   // 更改配置
+   lock_config.l_type = F_UNLCK;
+   // 重新生效
+   fcntl(lock_file_fd, F_SETLKW, &lock_config);
+   ```
+
+9. 共享文件可以使用`文件锁`来避免读写者问题。共享内存则是使用`信号量`来避免读写
+   者问题。信号量是内核变量，进程对信号量进行变更的操作是原子操作
+
+   关于信号量的操作
+
+   ```c
+   // 创建信号量
+   // key: 共享内存的id 
+   // nsems: 信号量的数量
+   // semflg: 配置，在创建时传入`0666|IPC_CREAT|IPC_EXCL`(权限，新建一个信号量，如果此信号量存在则出错)
+   // return: 信号量集合的id
+   // note: 此api既可以用来创建新的信号量，也可以用来取之前存在的信号量
+   int semget(key_t key, int nsems, int semflg);
+   ```
+
+   ```c
+   // 对信号量进行控制
+   // semid: 信号量集合的id
+   // semnum: 集合中信号量的索引值
+   // cmd: 控制操作，如果cmd需要参数，则在cmd后面补充(可以赋值，删除)
+   int semctl(int semid, int semnum, int cmd, ...);
+   ```
+
+   ```c
+   // 对信号量集进行一些操作
+   // semid: 信号量集合的id
+   // scops: 操作(活动)的数组
+   // nsops: scops数组的大小
+   int semop(int semid, struct sembuf *sops, size_t nsops);
+   /// sembuf数组里面结构体的顺序无所谓，会遍历并且执行
+   ```
+
+   ```c
+   // 代表着一个操作
+   struct sembuf {
+      unsigned short sem_num;  /* semaphore number */ // 你要操作哪一个信号量
+      short          sem_op;   /* semaphore operation */// 你要做什么
+      short          sem_flg;  /* operation flags */  // 有什么特殊要求没有
+      // sem_flg 比如SEM_UNDO 会自动对本次信号量操作复位
+   } 
+   ```
+
+   > `SEM_UNDO`是很有用的，比如你的进程对某一个内存空间写者信号量+1，但它在将其
+   -1前意外退出，那么此时其他的读者进程就完全没办法读这个内存空间了，因为写者信
+   号量非0
