--- a/system/system-programming/understanding-unix-linux-programming/Ch15.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch15.md
@@ -184,3 +184,22 @@
    > `SEM_UNDO`是很有用的，比如你的进程对某一个内存空间写者信号量+1，但它在将其
    -1前意外退出，那么此时其他的读者进程就完全没办法读这个内存空间了，因为写者信
    号量非0
+
+10. 共享内存和文件需要在进程中对其进行加锁，管道和socket则不需要，是因为后两者
+    是由内核直接控制的。但其实内核也做了加锁的操作，只不过用户感知不到，对用户
+    透明罢了
+
+11. 除了服务器给客户端发送消息的例子，还有客户端给服务器发送消息的例子。比如打印
+    机的使用，当一个进程想要给打印机发送文件，让打印机将其打印出来。如果避免多个
+    进程对打印机设备的写的冲突呢？
+
+    一个显然的解决方法就是写一个程序，此程序打开打印机文件，然后对其加上写锁，并
+    进行打印，打印完成后再将锁释放掉。
+
+    但Linux不是这样做的，转而我们有一个打印精灵`line printer daemon`的东西，只有此
+    进程才可以访问打印设备。当其他进程想要打印的时候，他们运行`lpr`程序，`lpr`将文
+    件的内容进行复制，放在打印任务队列中去
+
+
+12. UNIX domain socket又称为named socket，但还是UNIX domain socket这个名字用得比较
+    广泛
