--- a/system/system-programming/understanding-unix-linux-programming/Ch14.md
+++ b/system/system-programming/understanding-unix-linux-programming/Ch14.md
@@ -32,12 +32,15 @@
         pthread_t t1;
         pthread_t t2;
 
-        pthread_create(&t1, NULL, )
+        pthread_create(&t1, NULL, change_n, NULL);
+        pthread_create(&t2, NULL, change_n, NULL);
     }
 
     void * change_n(void * p) {
+        // lock the MUTEX
         pthread_mutex_lock(&lock);
         n += 1; 
+        // unlock it
         pthread_mutex_unlock(&lock);
     }
     ```
@@ -78,6 +81,7 @@
    pthread_mutex_t lock = PTHREAD_MUTEX_INITIALIZER;
 
    pthread_mutex_lock(&lock);
+
    // 会挂起当前线程，等待`flag`发生变化，并将`lock`给解锁。当`flag`发生变化，
    // 当前线程会被唤醒，且自动给`lock`再加锁
    // NOTE: 需要注意的是，在当前线程调用此函数前，该线程必须拥有对lock的独占权
@@ -143,4 +147,4 @@
    `Joined thread`完成其任务，但是其他的线程并没有在其上调用`join`，此时的线程
    就变成了僵尸线程
 
-   > detached thread由于其会自动释放资源，在任务完成的时候，故不会产生僵尸线程
+   > detached thread由于其会自动释放资源，故不会产生僵尸线程
