--- a/programming-language/Rust/rust-by-example/Ch15.md
+++ b/programming-language/Rust/rust-by-example/Ch15.md
@@ -15,3 +15,10 @@
    > T要么其中的东西是自己的，想什么时候drop就drop(owned type)；要不就它借用了别
    人的东西，但是被借用的东西想什么时候还就还(在程序的整个生命周期都存在)
 
+
+2. `impl Trait + 'lifetime` 意味着:
+    * you do not know the exact type. That's the impl ... part.
+    * the unspecified concrete type implements `Trait`. That's the Trait part.
+    * the unspecified concrete type **may contain** references with the 'lifetime. That's the + 'lifetime part.
+
+    上面的`may contain`的思想也适用于`T: Trait + 'lifetime`
